# civ-lead-scraper

./: .gitignore  Dockerfile  README.md  cities.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  tasks.py
agent/: booker.py  executor.py  follow_up.py  monitor.py  personaliser.py  researcher.py
dashboard/: main.py
dashboard/routes/: calls.py  leads.py  no_email.py  outreach.py  videos.py
email_finder/: .gitignore  index.js  leads.json  linkedin_urls.json  package-lock.json  package.json  results.json  update_db.py
scraper/: deduplicator.py  enricher.py  hubspot.py  notifier.py  places.py
tasks/: __init__.py  agent_tasks.py  celery_config.py  notification_tasks.py  scraper_tasks.py
