[tool.poetry]
name = "civ-lead-scraper"
version = "0.1.0"
description = "civil engineering lead generation pipeline"
authors = ["e"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.34.2"
python-dotenv = "^1.2.2"
playwright = "^1.59.0"
hubspot-api-client = "^12.0.0"
celery = "^5.6.3"
redis = "^7.4.0"
tenacity = "^9.1.4"
google-auth-oauthlib = "^1.4.0"
google-auth = "^2.53.0"
google-api-python-client = "^2.197.0"
fastapi = "^0.136.3"
uvicorn = {extras = ["standard"], version = "^0.49.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
